add modest and team

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>MODEST</title>
@@ -70,10 +70,8 @@
       </div>
     </div>
   </section>
-  <section class="modest container">
-    <div class="modest-heading">
-      <h2>we are modest</h2>
-    </div>
+  <section class="modest container heading">
+    <h2>we are modest</h2>
     <div class="modest-content">
       <div class="modest-info">
         <div class="modest-desc">
@@ -103,22 +101,55 @@
           <span>01</span>
           <div class="modest-item-title">
             <h4>Dedication to the customers</h4>
-            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
+            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. </p>
           </div>
         </div>
         <div class="modest-item">
           <span>02</span>
           <div class="modest-item-title">
-            <h4>working closely with our clients</h4>
-            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
+            <h4>Working closely with our clients</h4>
+            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. </p>
           </div>
         </div>
         <div class="modest-item">
           <span>03</span>
           <div class="modest-item-title">
-            <h4>increase happiness</h4>
-            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus. Nam porttitor blandit </p>
+            <h4>Increase happiness</h4>
+            <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus.  </p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="team container heading">
+    <h2>meet the team</h2>
+    <div class="team-list">
+      <div class="team-item">
+        <img src="./images/img1.png" alt="" class="team-item-image">
+        <div class="team-item-info">
+          <div class="team-item-name">Phuong Vu</div>
+          <div class="team-item-desc">CEO</div>
+        </div>
+      </div>
+      <div class="team-item">
+        <img src="./images/img3.png" alt="" class="team-item-image">
+        <div class="team-item-info">
+          <div class="team-item-name">Van Cuong</div>
+          <div class="team-item-desc">CTO</div>
+        </div>
+      </div>
+      <div class="team-item">
+        <img src="./images/img1.png" alt="" class="team-item-image">
+        <div class="team-item-info">
+          <div class="team-item-name">Loc Duong</div>
+          <div class="team-item-desc">Leader</div>
+        </div>
+      </div>
+      <div class="team-item">
+        <img src="./images/img2.png" alt="" class="team-item-image">
+        <div class="team-item-info">
+          <div class="team-item-name">Lien Nguyen</div>
+          <div class="team-item-desc">Boss</div>
         </div>
       </div>
     </div>
