add work and doing

--- a/index.html
+++ b/index.html
@@ -154,7 +154,141 @@
       </div>
     </div>
   </section>
-
+  <section class="work heading">
+    <div class="container">
+      <h2>lovely work</h2>
+      <div class="work-list">
+        <div class="work-item">
+          <img src="./images/1.jpg" alt="" class="work-image">
+        </div>
+        <div class="work-item">
+          <img src="./images/2.jpg" alt="" class="work-image">
+        </div>
+        <div class="work-item">
+          <img src="./images/3.jpg" alt="" class="work-image">
+        </div>
+        <div class="work-item">
+          <img src="./images/4.jpg" alt="" class="work-image">
+        </div>
+        <div class="work-item">
+          <img src="./images/5.jpg" alt="" class="work-image">
+        </div>
+        <div class="work-item">
+          <img src="./images/6.jpg" alt="" class="work-image">
+        </div>
+      </div>
+      <div class="button work-button">show me more</div>
+    </div>
+  </section>
+  <section class="doing heading container">
+    <h2>what we do</h2>
+    <div class="doing-list">
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="fas fa-cogs"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            Easy theme Setup
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="far fa-clock"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            24/7 support
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="fas fa-pencil-alt"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            pixel perfect design
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="fas fa-mobile-alt"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            responsive display
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="fas fa-cogs"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            Easy theme Setup
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="far fa-clock"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            24/7 support
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="fas fa-pencil-alt"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            pixel perfect design
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+      <div class="doing-item">
+        <div class="doing-item-image">
+          <i class="fas fa-mobile-alt"></i>
+        </div>
+        <div class="doing-item-info">
+          <h4 class="title">
+            responsive display
+          </h4>
+          <p class="desc">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit alias dignissimos ab, ullam ducimus et labore voluptate placeat reprehenderit optio earum
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
