add feature and footer

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
       </div>
     </div>
   </section>
-  <section class="work heading">
-    <div class="container">
+  <section class="work">
+    <div class="heading container">
       <h2>lovely work</h2>
       <div class="work-list">
         <div class="work-item">
@@ -289,6 +289,66 @@
       </div>
     </div>
   </section>
+  <section class="features">
+      <div class="container heading">
+        <h3 class="features-title">features</h3>
+        <div class="features-list">
+          <div class="features-item">
+            <img src="./images/features/1.jpg" alt="" class="features-item-image"/>
+            <div class="features-info">
+              <div class="features-item-title">
+                Product Design: Eames Chairs
+              </div>
+              <div class="features-item-desc">Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</div>
+            </div>
+          </div>
+          <div class="features-item">
+            <img src="./images/features/2.jpg" alt="" class="features-item-image"/>
+            <div class="features-info">
+              <div class="features-item-title">
+                Elegant and Colorful Logos
+              </div>
+              <div class="features-item-desc">I’ve always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</div>
+            </div>
+          </div>
+          <div class="features-item">
+            <img src="./images/features/3.jpg" alt="" class="features-item-image"/>
+            <div class="features-info">
+              <div class="features-item-title">
+                A Showcase of Creative
+              </div>
+              <div class="features-item-desc">It’s always interesting to see another designer’s take on a famous website, app or even physical product. Different designers add their own personality and style.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </section>
+  <section class="contact">
+
+  </section>
+  <footer class="footer">
+    <div class="footer-info container">
+      <div class="footer-title">@Copyright 2021 by Admin</div>
+      <div class="footer-social">
+        <div class="footer-social-item">
+          <img src="./images/socials/behance.png" alt="">
+        </div>
+        <div class="footer-social-item">
+          <img src="./images/socials/dribbble.png" alt="">
+        </div>
+        <div class="footer-social-item">
+          <img src="./images/socials/facebook.png" alt="">
+        </div>
+        <div class="footer-social-item">
+          <img src="./images/socials/skype.png" alt="">
+        </div>
+        <div class="footer-social-item">
+          <img src="./images/socials/linkedin.png" alt="">
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
